PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2007, PHP 5.2.1
- Zend Memory Manager Improvements (Dmitry)
  . use HeapAlloc() instead of VirtualAlloc()
  . use "win32" storage manager (instead of "malloc") on Windows by default
- Zip Extension Improvements (Pierre)
  . Fixed leak in statName and stateIndex
  . Fixed return setComment (Hannes)
  . Added addEmptyDir method
- Filter Extension Improvements (Ilia)
  . Fixed a bug when callback function returns a non-modified value.
  . Added filter support for $_SERVER in cgi/apache2 sapis.
  . Make sure PHP_SELF is filtered in Apache 1 sapi.
  . Fixed bug #39358 (INSTALL_HEADERS contains incorrect reference to
    php_filter.h).
- Fixed wrong signature initialization in imagepng (Takeshi Abe)
- Added optimization for imageline with horizontal and vertial lines (Pierre)
- Fixed bug #39414 (Syntax error while compiling with Sun Workshop Complier).
  (Johannes)
- Fixed bug #39398 (Booleans are not automatically translated to integers).
  (Ilia)
- Fixed bug #39366 (imagerotate does not use alpha with angle > 45°) (Pierre)
- Fixed bug #39362 (Added an option to imap_open/imap_reopen to control the 
  number of connection retries). (Ilia)
- Fixed bug #39350 (crash with implode("\n", array(false))). (Ilia)
- Fixed bug #39273 (imagecopyresized may ignore alpha channel) (Pierre)
- Fixed bug #39364 (Removed warning on empty haystack inside mb_strstr()).
  (Ilia)
- Fixed bug #39354 (Allow building of curl extension against libcurl 7.16.0)
  (Ilia) 
- Fixed bug #39344 (Unnecessary calls to OnModify callback routine for
  an extension INI directive). (wharmby at uk dot ibm dot com, Dmitry)
- Fixed bug #39320 (ZEND_HASH_APPLY_STOP causes deletion). (Marcus)
- Fixed bug #39313 (spl_autoload triggers Fatal error). (Marcus)
- Fixed bug #39300 (make install fails if wget is not available). (Tony)